# Music_Visualization_RealTime

./: .gitattributes  CMakeLists.txt  Doxyfile  LICENSE  QT description.md  README.md  Readme.html  http.cpp  http.h  images  main.cpp  mainwindow.ui  pyTranslateToCpp.cpp  test1.cpp  test_arduino.cpp  test_dht11_0.2.cpp  test_dht11_print.cpp  test_keyboard.cpp  test_led.cpp  test_led_0.2.cpp  test_led_print.cpp  test_ledstrip.cpp  test_ledstrip_.py  try_googletest1.cpp  try_googletest2.cpp  widget.ui
.github/: docs_update.yml
.github/workflows/: cmake_build.yml  codeql.yml  docs.yml  docs_update.yml  test.yml
docs/html/: AudioSource_8h_source.html  LEDThread_8h_source.html  SetDevice_8h_source.html  WS2812B_8h_source.html  _w_s2812_b_8h_source.html  annotated.html  classAudioSource-members.html  classAudioSource.html  classLEDThread-members.html  classLEDThread.html  classMainWindow-members.html  classMainWindow.html  classSetDevice-members.html  classSetDevice.html  classSetDeviceTest-members.html  classSetDeviceTest.html  classUi_1_1MainWindow-members.html  classUi_1_1MainWindow.html  classUi__MainWindow-members.html  classUi__MainWindow.html  classWS2812B-members.html  classWS2812B.html  classWS2812BTest-members.html  classWS2812BTest.html  class_main_window-members.html  class_main_window.html  class_ui_1_1_form-members.html  class_ui_1_1_form.html  class_ui___form-members.html  class_ui___form.html  class_w_s2812_b-members.html  class_w_s2812_b.html  class_w_s2812_b_test-members.html  class_w_s2812_b_test.html  classes.html  clk_8h_source.html  code_2version_8h_source.html  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_3bd81fc009ca33362ff5ff68bd4dbbeb.html  (+62 more)
doxygen/html/: _w_s2812_b_8h_source.html  annotated.html  class_main_window-members.html  class_main_window.html  class_ui_1_1_form-members.html  class_ui_1_1_form.html  class_ui___form-members.html  class_ui___form.html  class_w_s2812_b-members.html  class_w_s2812_b.html  class_w_s2812_b_test-members.html  class_w_s2812_b_test.html  classes.html  clk_8h_source.html  code_2version_8h_source.html  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_53f00e4249242e8fcf4641d0c5f213c4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_698550bb59edd3c49c64effd6e2487a3.html  dir_9051bef3a266135095a77a00293fa4fd.html  dir_92783a7f0bdbd695c15c971f7f535748.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_9f9b7f951c6c5119216535c04b814f45.html  dir_9fb077707694d20b7a13b312a4d64457.html  dir_bd36a8115b9e41621e8e7d4447019e35.html  dir_c54f6a33ceb3029774a1eaaccd4e41e1.html  dir_d5f7f7b5f137ffd5eaa1f185f053ab85.html  dir_daf26b2238ee11de6e756f017ac57888.html  dir_ea7fab6a76ca2c8e9407b76efd002854.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_fb2532ea8295f3b4047a2c3c50de0b1b.html  dma_8h_source.html  files.html  gpio_8h_source.html  hierarchy.html  index.html  mailbox_8h_source.html  mainwindow_8h_source.html  md__r_e_a_d_m_e.html  (+28 more)
draft/: README.md  test_arduino.cpp  test_dht11.c  test_dht11_0.2.cpp  test_ledstrip.py  （按钮指令）QT整理内容(中文版).docx  （按钮指令）QT整理内容(英文版).docx
draft/gaijinhoudeshipin/: a.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/: README.md  mainwindow.h  test.ui  ui_test.h
src/: AudioSource.cpp  AudioSource.h  CMakeLists.txt  LEDThread.cpp  MusicVisualization.pro  MusicVisualization.pro.user.ecbb4dd  MusicVisualization_update.pro  SetDevice.cpp  SetDevice.h  WS2812B.cpp  WS2812B.h  arduino_test.c  arduino_test.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  test.cpp  test.h
src/AudioSample2/: AudioSample2.pro  DataSource.cpp  DataSource.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Dev/rpi_ws281x/: pkg-config.pc.in
src/Dev/rpi_ws281x/DEBIAN/: prerm
src/MusicVisualization/: AudioSource.cpp  AudioSource.h  LEDThread.cpp  LEDThread.h  MusicVisualization.pro  WS2812B.cpp  WS2812B.h  mainwindow.cpp  mainwindow.h
src/MusicVisualization/rpi_ws281x/: SConstruct  mailbox.h  pcm.h  pwm.h  rpihw.h
src/UnitTest/: UnitTest.pro
src/ledAudio/: AudioSource.cpp  AudioSource.h  CMakeLists.txt  LEDThread.cpp  LEDThread.h  WS2812B.cpp  WS2812B.h  ledAudio.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ledAudio/ledAudio/: AudioSource.cpp  LEDThread.cpp  WS2812B.cpp  WS2812B.h  ledAudio.pro  mainwindow.cpp
src/ledAudio/rpi_ws281x/: LICENSE  README.md  clk.h  mailbox.c  pwm.c
src/ledStrip/: LEDThread.cpp  LEDThread.h  ledStrip.pro  ledStrip.pro.user.8433253  ledStrip.pro.user.ecbb4dd  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ledStrip/rpi_ws281x/: CMakeLists.txt  SConscript  gpio.h  rpihw.c  version.py
src/ledStrip/rpi_ws281x/DEBIAN/: control  postinst  postrm
src/rpi_ws281x/: dma.c  ws2811.h
src/tests/: CMakeLists.txt  test_WS2812B.cpp
test/: CMakeLists.txt  gtest_AudioSource.h  gtest_LEDThread.h  gtest_SetDevice.h  gtest_WS2812B.h  main.cpp  test_SetDevice.cpp
tests/: CMakeLists.txt  test_AudioSource.cpp  test_WS2812B.cpp
(+75 files in other folders)
